8253592: [lworld] C2: Additional fixes for handling empty inline types